Remove extra character and nulls in HTML export for lines with CJK

Issue:  
When exporting lines containing CJK characters, the HTML output may
contain an extra character at the end of the line and null
characters between CJK characters.

Change:
- Mark the position after a CJK character as the right half of a
  double-width character (null character).
- Ignore null characters when exporting to HTML.

BUG: 511323